k8s/web/http-echo.yml
apiVersion: v1
kind: Pod
metadata:
  name: http-echo
  namespace: web
  labels:
    app: http-echo
spec:
  containers:
    - name: http-echo
      image: hashicorp/http-echo
      args:
        - "-text=PR BUSEM works!"
      ports:
        - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: http-echo
  namespace: web
spec:
  selector:
    app: http-echo
  ports:
    - port: 80
      targetPort: 5678
