k8s/web/http-echo-ingress-route.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: http-echo-ingress-route
  namespace: web
spec:
  entryPoints:
    - websecure
  routes:
    - match: PathPrefix(`/default/http-echo`)
      kind: Rule
      middlewares:
        - name: redirect-to-https
      services:
        - name: http-echo
          port: 80
  tls:
    secretName: web-cert-secret
