k8s/web/http-echo-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-echo-ingress
  namespace: web
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: web-redirect-to-https@kubernetescrd
spec:
  rules:
    - host: lab04.ce.uni-linz.ac.at
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: http-echo
                port:
                  number: 80
  tls:
    - secretName: web-cert-secret
