k8s/web/strapi-ingress-route-dev.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: strapi-ingress-route
  namespace: web
spec:
  entryPoints:
    - websecure
  routes:
    - match: PathPrefix(`/dev/strapi`)
      kind: Rule
      middlewares:
        - name: redirect-to-https
      services:
        - name: strapi-service
          namespace: development
          port: 80
